<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/book_menu_save"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_save_book"
        android:title="@string/save_book" />

    <item
        android:id="@+id/book_menu_edit"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_edit_book"
        android:title="@string/edit_book" />

    <item
        android:id="@+id/book_menu_delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_delete_book"
        android:title="@string/delete_book" />

    <item
        android:id="@+id/book_menu_update"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_update_book"
        android:title="@string/update_book" />


</menu>