<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/five_dp"
    android:layout_marginEnd="@dimen/five_dp"
    android:backgroundTint="@color/color19"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/five_dp"
    app:cardElevation="@dimen/three_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="@dimen/eighty_dp"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cd_book_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fourty_dp"
                    android:text="@string/book_name"
                    android:textSize="@dimen/twentyfour_sp" />

                <TextView
                    android:id="@+id/cd_book_author"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fourty_dp"
                    android:text="@string/book_author"
                    android:textSize="@dimen/twenty_sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/cd_book_percent"
                android:textSize="@dimen/percentsp"
                android:gravity="center"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/read_pages_percent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>