<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityies.AddingBookActivity">

    <TextView
        android:text="@string/add_book_title"
        android:gravity="center"
        android:textSize="65sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fourty_dp"
        android:layout_marginTop="@dimen/towhundredtwenty_dp"
        android:layout_marginEnd="@dimen/fourty_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/draw_book"
            android:drawablePadding="@dimen/ten_dp"
            android:hint="@string/entry_book_name"
            android:inputType="text"
            android:textColorHint="@color/color22"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fourty_dp"
        android:layout_marginTop="@dimen/threehundred_dp"
        android:layout_marginEnd="@dimen/fourty_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/draw_author"
            android:drawablePadding="@dimen/ten_dp"
            android:id="@+id/enter_book_author"
            android:inputType="text"
            android:textColorHint="@color/color22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_book_author"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fourty_dp"
        android:layout_marginTop="@dimen/threehundredeighty_dp"
        android:layout_marginEnd="@dimen/fourty_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/draw_pages"
            android:drawablePadding="@dimen/ten_dp"
            android:id="@+id/enter_book_pages"
            android:inputType="number"
            android:textColorHint="@color/color22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_book_pages"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fourty_dp"
        android:layout_marginTop="@dimen/fourhundredsixty_dp"
        android:layout_marginEnd="@dimen/fourty_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/draw_finished"
            android:drawablePadding="@dimen/ten_dp"
            android:id="@+id/enter_book_finished"
            android:inputType="number"
            android:textColorHint="@color/color22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_book_finished"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>